# hello

./: .gitignore  CMakeLists.txt  README.md  hello.c
lib/: CMakeLists.txt  keys.c  keys.h
lib/client/: CMakeLists.txt  client.c  client.h
lib/error/: error.h
lib/keys/: CMakeLists.txt  keys.c  keys.h
main/: CMakeLists.txt  main.c
